--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,6 @@
 platform = espressif32
 board = esp32dev
 board_build.mcu = esp32
-board_build.f_cpu = 240000000L
 framework = arduino
+monitor_speed = 115200
 lib_extra_dirs = C:\Workspaces\IOT\Arduino-lib
