--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 // AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
-
+//
 // PIO Unified Debugger
 //
 // Documentation: https://docs.platformio.org/page/plus/debugging.html
@@ -12,19 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Workspaces/IOT/ESP32_Drone/wifi-drone-esp32/.pio/build/esp32dev/firmware.elf",
+            "executable": "C:/Workspaces/IOT/ESP32_Drone/wifi-drone-esp32/.pio/build/esp32dev/firmware.elf",
+            "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/User/.platformio/packages/toolchain-xtensa32/bin",
+            "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
-            },
-            "internalConsoleOptions": "openOnSessionStart"
+            }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Workspaces/IOT/ESP32_Drone/wifi-drone-esp32/.pio/build/esp32dev/firmware.elf",
+            "executable": "C:/Workspaces/IOT/ESP32_Drone/wifi-drone-esp32/.pio/build/esp32dev/firmware.elf",
+            "projectEnvName": "esp32dev",
             "toolchainBinDir": "C:/Users/User/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
